k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: condo-backend-service
spec:
  selector:
    app: condo-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
